# ocaml-scgi

./: .gitignore  .ocamlformat  .ocp-indent  Makefile  README.md  dune  dune-project  package.json  scgi.opam  scgi.opam.locked
_esy/default/: build  install  installation.json  pnp.js
_esy/default/cache/: project-9e79c060f813325425978eeff26a9269
_esy/default/store/b/scgi-06af8d5d/: .db  .digest-db  .to-delete-in-source-tree  log
_esy/default/store/b/scgi-06af8d5d/.aliases/default/: fmt-00000000000000000000000000000000  install-00000000000000000000000000000000
_esy/default/store/b/scgi-06af8d5d/.aliases/default/esy.lock/: fmt-00000000000000000000000000000000
_esy/default/store/b/scgi-06af8d5d/.aliases/default/samples/: fmt-00000000000000000000000000000000
_esy/default/store/b/scgi-06af8d5d/default/: scgi.opam
_esy/default/store/b/scgi-06af8d5d/default/samples/: HelloWorldClient.re.ml  HelloWorldClient.re.pp.ml  HelloWorldServer.re  HelloWorldServer.re.ml  HelloWorldServer.re.pp.ml  TodoScgi.re.ml  TodoScgi.re.pp.ml
_esy/default/store/b/scgi-06af8d5d/default/src/: headers.pp.mli  http_header.pp.ml  http_header.pp.mli  http_method.pp.ml  http_method.pp.mli  http_status.pp.mli  netstring.pp.ml  netstring.pp.mli  request.pp.ml  request.pp.mli  response.pp.mli  scgi.cma  scgi.cmxa  scgi.cmxs  server.pp.mli
_esy/default/store/b/scgi-06af8d5d/install/default/lib/scgi/: client.mli  (+32 more)
_esy/default/store/b/scgi-b63e30e7/: .db  .digest-db  .to-delete-in-source-tree  log
_esy/default/store/b/scgi-b63e30e7/default/: META.scgi  scgi.dune-package  scgi.opam
_esy/default/store/b/scgi-b63e30e7/default/src/: client.pp.ml  client.pp.mli  headers.pp.ml  http_status.pp.ml  response.pp.ml  scgi.cma  scgi.ml-gen  server.pp.ml
_esy/scgi/: installation.json  pnp.js
_esy/scgi/cache/: project-975df1aa8618365454e9d623312da86c
esy.lock/: index.json
examples/: TodoScgi.re  dune  helloworld_client.ml
samples/: HelloWorldClient.re  TodoScgi.re  dune  hello_scgi.ml  hello_scgi.re  hello_scgi_unix_sock.re  jbuild  myocamlbuild.ml  ubuntu_nginx_setup
samples/ocaml/: todo.ml
scgi.esy.lock/: index.json
src/: Headers.re  Headers.rei  Http_header.re  Http_header.rei  Makefile  _tags  client.ml  client.mli  dune  headers.ml  headers.mli  http_header.ml  http_header.mli  http_method.ml  http_method.mli  http_status.ml  http_status.mli  jbuild  let_syntax.ml  myocamlbuild.ml  netstring.ml  netstring.mli  request.ml  request.mli  response.ml  response.mli  scgi.mlpack  server.ml  server.mli
test/: client_server_test.ml  dune  netstring_test.ml  request_test.ml  scgi_test.ml  test_common.ml
(+252 files in other folders)
